crates/ars-forms/src/form/snapshots/ars_forms__form__component__tests__form_root_submitting.snap
---
source: crates/ars-forms/src/form/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "submitting",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "checkout",
            ),
        ),
        (
            NoValidate,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
