crates/ars-forms/src/form/snapshots/ars_forms__form__component__tests__form_status_region_default.snap
---
source: crates/ars-forms/src/form/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).status_region_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "status-region",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Role,
            String(
                "status",
            ),
        ),
    ],
    styles: [],
}
